--- a/need/register.ui
+++ b/need/register.ui
@@ -185,7 +185,7 @@ padding-bottom:8px;
 </string>
         </property>
         <property name="text">
-         <string>注意：通过此软件注册，你将获得官方活动给予的一定会员时间，开发者也因为你的注册获得一定会员时间(邀请机制)，如若介意，请自行安装官方安卓APP下载注册</string>
+         <string>注意：注册时将自动获取会员码及5天邀请会员，会员码将会发送到注册邮箱（详情见输出台）</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
